<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            tools:ignore="MissingConstraints">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_20sdp"
                        android:text="@string/Fueling_Started"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingStart="@dimen/_10sdp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/body_fueling_started_dialog"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"

                        android:layout_marginHorizontal="@dimen/_10sdp"
                        tools:ignore="RtlSymmetry" />


                    <ImageView
                        android:id="@+id/Image"
                        android:layout_width="130sp"
                        android:layout_height="130sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:contentDescription="@string/image_description"
                        android:src="@drawable/fulingstarted">

                    </ImageView>

                    <TextView
                        android:id="@+id/btn_finish_fuueling"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:visibility="gone"
                        android:background="@drawable/rounded_red"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Finish_Fueling"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:backgroundTint="@color/red_error"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_ViewTransaction"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:background="@drawable/rounded_blue"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/View_Transaction"
                        android:textColor="@color/white"

                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/btn_BackToSearch"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="@drawable/rounded_blue"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Back_Search"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:backgroundTint="@color/light_blue"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>