<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            tools:ignore="MissingConstraints">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingTop="@dimen/_20sdp"
                        android:text="@string/Fueling_Finished"
                        android:textColor="@color/red_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingStart="@dimen/_20sdp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:text="@string/body_fueling_finished_dialog"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"
                        android:paddingStart="@dimen/_20sdp"
                        tools:ignore="RtlSymmetry" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/rounded_gray"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/fuel_ed"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/number_of_liters"
                            android:inputType="number"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="#6B6B6B"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="@string/liters"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_Done"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/_20sdp"
                        android:background="@drawable/rounded_blue"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Done"
                        android:textColor="@color/white"
                        android:textSize="29sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>