<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            tools:ignore="MissingConstraints">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingTop="@dimen/_20sdp"
                        android:text="@string/filter"
                        android:drawablePadding="10dp"
                        android:textColor="@color/black1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingStart="@dimen/_20sdp"
                        tools:ignore="RtlSymmetry"
                        app:drawableLeftCompat="@drawable/filter_img"/>

                    <TextView
                        android:id="@+id/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:text="@string/Select_Time_message"
                        android:textColor="@color/gray1"
                        android:textSize="14sp"
                        android:paddingStart="@dimen/_20sdp"
                        tools:ignore="RtlSymmetry" />




                        <EditText
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:background="@drawable/rounded_gray"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:id="@+id/fromcalender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:paddingEnd="10dp"
                            android:autofillHints=""
                            android:focusable="false"
                            android:drawableEnd="@drawable/calender_img"
                            android:hint="@string/from"
                            android:inputType="none"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="#6B6B6B"
                            tools:ignore="RtlSymmetry"
                            android:drawableRight="@drawable/calender_img"
                            android:paddingRight="10dp" />

                        <EditText
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:background="@drawable/rounded_gray"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:id="@+id/tocalender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:paddingEnd="10dp"
                            android:autofillHints=""
                            android:focusable="false"
                            android:drawableEnd="@drawable/calender_img"
                            android:hint="@string/to"
                            android:inputType="none"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="#6B6B6B"
                            tools:ignore="RtlSymmetry"
                            android:drawableRight="@drawable/calender_img"
                            android:paddingRight="10dp" />

                    <Button
                        android:id="@+id/btn_show_results"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/_20sdp"
                        android:background="@drawable/rounded_blue"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/show_result"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_20sdp"
                        android:textColor="@color/gray0"
                        android:layout_gravity="center"
                        android:text="@string/cancel"
                        android:layout_marginBottom="@dimen/_20sdp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>